objects/Weekly_Buisness_Status__c.object
<CustomObject>
    <fields>
        <fullName>Current_Week_End_Date__c</fullName>
        <label>Week End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Week_StartDate__c</fullName>
        <label>Current Week StartDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>TEXT($User.Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Target_Business__c</fullName>
        <label>Target Business</label>
        <picklist>
            <picklistValues>
                <fullName>Silicon Realization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System &amp; Software Realization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SoC Realization</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Week_end__c</fullName>
        <formula>IF( NOT( ISNULL(CreatedDate)) ,
CASE(
MOD(DATEVALUE(CreatedDate) - DATE(1900, 1, 7), 7),
1, DATEVALUE(CreatedDate)+ 4,
2, DATEVALUE(CreatedDate)+ 3,
3, DATEVALUE(CreatedDate)+ 2,
4, DATEVALUE(CreatedDate)+ 1,
5, DATEVALUE(CreatedDate)+ 0,
6, DATEVALUE(CreatedDate)+ 6,
0, DATEVALUE(CreatedDate)+5,null),
CASE(
MOD(TODAY() - DATE(1900, 1, 7), 7),
1, today() + 4,
2, today() + 3,
3, today() + 2,
4, today() + 1,
5, today() + 0,
6, today() + 6,
0, today() +5,null)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Week end date is usually the Friday of the current week. The system auto calculates the date to the next friday</inlineHelpText>
        <label>Week end date</label>
        <type>Date</type>
    </fields>
    <label>Weekly Business Status</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Weekly buisness Status  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Weekly Business Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>